# Android-TiffBitmapFactory

./: .gitignore  README.md  build-lib.sh  build-lib_guide.txt  build.gradle  jitpack.yml  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: CMakeLists.txt
lib/src/main/cpp/include/: NativeDecoder.h  NativeExceptions.h  NativeTiffBitmapFactory.h  NativeTiffSaver.h
lib/src/main/cpp/src/: NativeDecoder.cpp  NativeExceptions.cpp  NativeTiffBitmapFactory.cpp  NativeTiffSaver.cpp
lib/src/main/java/org/beyka/tiffbitmapfactory/: TiffBitmapFactory.java  TiffSaver.java
lib/src/main/java/org/beyka/tiffbitmapfactory/exceptions/: NotEnoughMemoryException.java
lib/src/main/jni/: BaseTiffConverter.cpp  BitmapReader.cpp  BmpToTiffConverter.cpp  JpgToTiffConverter.cpp  NativeTiffSaver.cpp
